--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@supabase/supabase-js": "^2.38.5",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -20,10 +22,10 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "redis": "^4.6.7",
-    "@supabase/supabase-js": "^2.38.5",
     "stripe": "^13.5.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0"
   }
