--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "redis": "^4.6.7",
+    "socket.io": "^4.7.2",
     "stripe": "^13.5.0"
   },
   "devDependencies": {
